<resources>
    <string name="app_name">WheelOfJeopardy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome to Wheel of Jeopardy! Start a game when you are ready!</string>
    <string name="title_activity_wheel">WheelActivity</string>
    <string name="wheel_greeting">Spin the wheel and take your turn!</string>
    <string name="pick_category_to_edit">Select the category you would like to edit.</string>

    <string name="num_players">Number of Players:</string>
    <string name="one_player">One</string>
    <string name="two_players">Two</string>

    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="category_3">Category 3</string>
    <string name="category_4">Category 4</string>
    <string name="category_5">Category 5</string>
    <string name="category_6">Category 6</string>

    <string name="category_name">Category Name:</string>

    <string name="question_1">Question 1:</string>
    <string name="question_2">Question 2:</string>
    <string name="question_3">Question 3:</string>
    <string name="question_4">Question 4:</string>
    <string name="question_5">Question 5:</string>

    <string name="answer_1">Answer 1:</string>
    <string name="answer_2">Answer 2:</string>
    <string name="answer_3">Answer 3:</string>
    <string name="answer_4">Answer 4:</string>
    <string name="answer_5">Answer 5:</string>

    <string name="current_round">Current Round:</string>
    <string name="current_player">Current Player:</string>
    <string name="score">Score:</string>
    <string name="remaining_spins">Remaining Spins:</string>
    <string name="remaining_questions">Remaining Questions:</string>
    <string name="wheel">The Wheel:</string>

    <string name="players_choice">Pick the category you want to anwers a question from.</string>
    <string name="opponents_choice">Have your oppenet pick the category for you!</string>

    <string name="answer_question">Get ready to answer a question from %s!</string>
    <string name="you_pick">Pick the category you want to answer a question from!</string>
    <string name="they_pick">Let your opponent pick the category your questions will come from!</string>
    <string name="won_free_spin">You got a Free Spin token! You now have %d Free Spin tokens!</string>
    <string name="lose_turn">Oh teh nose! You lost your turn!</string>
    <string name="score_bankrupt">Oh teh nose! You were just bankrupt!</string>
    <string name="score_doubled">Your score just doubled! Sweet!</string>
    <string name="no_more_questions">There are no more questions in that category. Take another spin!</string>

    <string name="question_label">Question:</string>
    <string name="answer_label">Answer:</string>
    <string name="user_answer_label">Your Answer:</string>
    <string name="time_remaining">Seconds remaining:</string>
    <string name="is_answer_correct">Did you get the answer correct?</string>

    <string name="game_over">The game is over!</string>
    <string name="player_scores">Player Scores:</string>
    <string name="want_a_new_game">Do you want to start another game?</string>

    <!-- Misc Buttons -->
    <string name="new_game_button">New Game</string>
    <string name="start_game_button">Start Game</string>
    <string name="edit_questions">Edit Questions</string>
    <string name="spin_wheel_button">Spin Wheel</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="title_activity_question_board">QuestionBoardActivity</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="ok_button">Okay</string>
    <string name="right_button">Right</string>
    <string name="wrong_button">Wrong</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="title_question_list">Questions</string>
    <string name="title_question_detail">Question Detail</string>
    <string name="save_button">Save</string>
</resources>
