<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewGameActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_num_players"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/num_players"/>

    <RadioGroup
        android:id="@+id/selectPlayers"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radio_one_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one_player"/>
        <RadioButton
            android:id="@+id/radio_two_players"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/two_players"/>
    </RadioGroup>

    <TextView
        android:id="@+id/text_choose_categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/choose_categories"/>

    <Spinner
        android:id="@+id/category_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_1"/>

    <Spinner
        android:id="@+id/category_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_2"/>

    <Spinner
        android:id="@+id/category_three"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_3"/>

    <Spinner
        android:id="@+id/category_four"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_4"/>

    <Spinner
        android:id="@+id/category_five"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_5"/>

    <Spinner
        android:id="@+id/category_six"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_6"/>

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/start_game_button"/>

</android.support.v7.widget.LinearLayoutCompat>